apps/devops-lab-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-lab-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-lab-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-lab-app
        component: app
    spec:
      containers:
        - name: app
          image: pipeops/devops-lab-app:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
