apps/devops-lab-app/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab-postgres
spec:
  selector:
    component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
